[tool.poetry]
name = "frozenlake_qlearning"
version = "0.1.0"
description = "Proyecto Q-learning en FrozenLake con Gymnasium"
authors = ["Agustin <agustin.lopezfredes@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^1.2"
numpy = "^2.2"
matplotlib = "^3.8"
tqdm = "^4.66"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"